rds/k8s/db/adminer/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-adminer
  labels:
    app.kubernetesio/part-of: DB
spec:
  selector:
    matchLabels:
      app: db-adminer
  template:
    metadata:
      labels:
        app: db-adminer
    spec:
      containers:
        - name: db-adminer
          image: docker.io/adminer
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
