rds/k8s/db/adminer/pgsql-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgsql-client
  labels:
    app: pgsql-client
spec:
  replicas: 1
  template:
    metadata:
      name: pgsql-client
      labels:
        app: pgsql-client
    spec:
      containers:
        - name: pgsql-client
          image: quay.io/rhdevelopers/openshift-pgsql12-client
          imagePullPolicy: IfNotPresent
          command:
            - tail
            - -f
            - /dev/null
  selector:
    matchLabels:
      app: pgsql-client
