rds/k8s/db/adminer/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: db-adminer
spec:
  selector:
    app: db-adminer
  ports:
  - port: 8080
    targetPort: 8080
  type: NodePort
