rds/k8s/db/adminer/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: db-adminer
spec:
  port:
    targetPort: 8080
  tls:
    termination: edge
  to:
    kind: Service
    name: db-adminer
    weight: 100
  wildcardPolicy: None
